test/fail/syntax_error/unterminated_character_literal.amla
func main() int {
     return 'a;
}